JobPortal/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-magnet-backend
  namespace: job-magnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-magnet-backend
  template:
    metadata:
      labels:
        app: job-magnet-backend
    spec:
      hostAliases:
        - ip: "192.168.65.254"
          hostnames:
            - "host.minikube.internal"
            - "mysql-host"
      containers:
        - name: backend
          image: e20376/job-magnet-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 6
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
            failureThreshold: 12
