JobPortal/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-magnet-backend
  namespace: job-magnet
spec:
  selector:
    app: job-magnet-backend
  ports:
    - port: 8080
      targetPort: 8080
